--- a/style.css
+++ b/style.css
@@ -2,13 +2,17 @@
     width: 25%;
     height: 25%;
     text-align: left;
-    font-family: helvetica;
+    font-family: arial;
+    font-style: normal;
+    font-weight: 400;
 }
 
 .portfoliotitle { /* div class names can only be 1 word*/
     text-align: left; /*text-align only works on block elements*/
     margin-left: 90px;
-    font-family: helvetica;
+    font-family: arial;
+    font-style: italic;
+    font-weight: 800;
 }
 /*
 h2 {
@@ -30,8 +34,12 @@ this gets priority even if it changes below*/
     margin-left: 250px;
     text-align: left;
     font-family: helvetica;
+    font-style: normal;
+    font-weight: 400;
 }
 
 footer {
     font-family: helvetica;
+    font-style: normal;
+    font-weight: 400;
 }
