--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+    cursor: crosshair;
+}
+
+a {
+    cursor: crosshair;
+}
+
 .crop img { /*crops the div="crop" sections. have to use img*/
     width: 25%;
     height: 25%;
@@ -36,10 +44,12 @@ this gets priority even if it changes below*/
     font-family: helvetica;
     font-style: normal;
     font-weight: 400;
+    cursor: crosshair;
 }
 
 footer {
     font-family: helvetica;
     font-style: normal;
     font-weight: 400;
+    cursor: crosshair;
 }
