--- a/style.css
+++ b/style.css
@@ -53,3 +53,5 @@ footer {
     font-weight: 400;
     cursor: crosshair;
 }
+
+/* Start http://www.cursors-4u.com */ * {cursor: url(http://ani.cursors-4u.net/symbols/sym-8/sym757.ani), url(http://ani.cursors-4u.net/symbols/sym-8/sym757.png), auto !important;} /* End http://www.cursors-4u.com */
