--- a/style.css
+++ b/style.css
@@ -52,6 +52,11 @@ footer {
     font-style: normal;
     font-weight: 400;
     cursor: crosshair;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 250px;
+    margin-left: 250px;
+    text-align: center;
 }
 
 /* Start http://www.cursors-4u.com */ * {cursor: url(http://ani.cursors-4u.net/symbols/sym-8/sym757.ani), url(http://ani.cursors-4u.net/symbols/sym-8/sym757.png), auto !important;} /* End http://www.cursors-4u.com */
